# swift-benchmark

./: .gitignore  .swift-format  CMakeLists.txt  Package.resolved  Package.swift  README.md
.github/workflows/: tests_mac.yaml  tests_ubuntu.yaml  tests_windows.yaml
Scripts/: compare.py
Sources/: CMakeLists.txt
Sources/Benchmark/: Benchmark.swift  BenchmarkArguments.swift  BenchmarkClock.swift  BenchmarkColumn.swift  BenchmarkCommand.swift  BenchmarkError.swift  BenchmarkFilter.swift  BenchmarkFormat.swift  BenchmarkFormatter.swift  BenchmarkMain.swift  BenchmarkRegistry.swift  BenchmarkReport.swift  BenchmarkReporter.swift  BenchmarkResult.swift  BenchmarkRunner.swift  BenchmarkSetting.swift  BenchmarkState.swift  BenchmarkSuite.swift  BenchmarkTermination.swift  BenchmarkTime.swift  CMakeLists.txt  Constants.swift  MakeTests.swift  Stats.swift  TestIntegration.swift
Sources/BenchmarkExample/: main.swift
Sources/BenchmarkMinimalExample/: CMakeLists.txt  main.swift
Sources/BenchmarkSuiteExample/: AddStringBenchmarks.swift  CMakeLists.txt  Suites.swift  main.swift
Sources/BenchmarkSuiteExampleMain/: CMakeLists.txt  main.swift
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/BenchmarkTests/: BenchmarkColumnTests.swift  BenchmarkCommandTests.swift  BenchmarkReporterTests.swift  BenchmarkRunnerOptionsTests.swift  BenchmarkRunnerTests.swift  BenchmarkSettingTests.swift  BenchmarkSuiteTests.swift  BenchmarkTests.swift  BlackHoleReporter.swift  CMakeLists.txt  CustomBenchmarkTests.swift  MockTextOutputStream.swift  ProgressReporterTests.swift  StatsTests.swift  XCTTestManifests.swift
cmake/modules/: BenchmarkConfig.cmake.in  CMakeLists.txt
